Imagem principal alterada

--- a/css/style.css
+++ b/css/style.css
@@ -247,7 +247,7 @@ nav a:hover:after { width: 100%; }
 /*--banner Slider --*/
 
 /*-- Slider --*/
-.oneimg{  background: url(../images/limpeza-de-pele-em-contagem.jpg);}
+.oneimg{  background: url(../images/principal_bg.jpg);}
 .twoimg{  background: url(../images/b2.jpg);}
 .threeimg{ background: url(../images/b3.jpg);}
 .slider-img{ 
