--- a/css/style.css
+++ b/css/style.css
@@ -565,6 +565,14 @@ a {
 }
 /*--//about--*/
 /*-- service--*/
+#servicosecao {padding: 100px 0;background-attachment: fixed !important;background-position: center !important;background-repeat: no-repeat !important;background-size: cover !important;}
+#servicosecao h1 {text-align: center;margin-bottom: 3%;color:white;font-weight: 800;}
+#servicosecao .servico { padding: 2% 3%; margin: 5px 8px; width: 31.9%; background: #868686b3; border-radius: 15px;}
+#servicosecao .servico h2 {color: white; font-weight: 800;margin-bottom: 8px;font-size: 21px;line-height: 24px;}
+#servicosecao .servico p {color: #aeaeae;}
+
+
+
 .services {
     background: url(../images/s1.jpg)no-repeat center;
     background-size: cover;
