--- a/css/style.css
+++ b/css/style.css
@@ -567,10 +567,16 @@ a {
 /*-- service--*/
 #servicosecao {padding: 100px 0;background-attachment: fixed !important;background-position: center !important;background-repeat: no-repeat !important;background-size: cover !important;}
 #servicosecao h1 {text-align: center;margin-bottom: 3%;color:white;font-weight: 800;}
-#servicosecao .servico { padding: 2% 3%; margin: 5px 8px; width: 31.9%; background: #868686b3; border-radius: 15px;}
+#servicosecao .servico { padding: 2% 3%; margin: 5px 8px; background: #868686b3; border-radius: 15px;}
 #servicosecao .servico h2 {color: white; font-weight: 800;margin-bottom: 8px;font-size: 21px;line-height: 24px;}
 #servicosecao .servico p {color: #aeaeae;}
 
+@media (min-width: 800px) {
+#servicosecao .servico {width: 31.9%;}
+}
+@media (max-width: 767px) {
+#servicosecao .servico {width: 100% !important;}
+}
 
 
 .services {
